--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
                                 </clipPath>
                             </defs>
                             <image clip-path="url(#price-img)"
-                                xlink:href="https://github.com/I-kumi/portfolio_02/blob/main/images/pc/BackGround_pc.jpg"
+                                xlink:href="images/pc/BackGround_pc.jpg"
                                 x="0" y="0" width="1440" height="1630"></image>
                         </svg>
                     </div>
@@ -266,7 +266,7 @@
                                 </clipPath>
                             </defs>
                             <image clip-path="url(#price-imgSp)"
-                                xlink:href="file:///Users/iwasakikumi/Desktop/portfolio_02/images/sp/BackGround_sp.jpg"
+                                xlink:href="images/sp/BackGround_sp.jpg"
                                 x="0" y="0" width="750" height="2458"></image>
                         </svg>
                     </div>
