--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>ベイク チーズタルト | BAKE CHEESE TART</title>
+    <title>サヴォワ チーズタルト | SAVOIE CHEESE TART</title>
     <link href="./css/reset.css" rel="stylesheet">
     <link href="./css/app.css" rel="stylesheet">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
@@ -195,7 +195,7 @@
                                     <span class="u-textDown u-downAnime">
                                         <span class="u-textDown__inner u-blocking">ESSENCE</span><br>
                                         <span class="u-textDown__inner u-blocking">OF</span><br>
-                                        <span class="u-textDown__inner u-blocking">BAKE CHEESE TART</span>
+                                        <span class="u-textDown__inner u-blocking">SAVOIE CHEESE TART</span>
                                     </span>
                                 </span>
                             </div>
@@ -218,7 +218,7 @@
                                             <span class="u-textDown__inner u-blocking">THE</span><br>
                                             <span class="u-textDown__inner u-blocking">ESSENCE</span><br>
                                             <span class="u-textDown__inner u-blocking">OF</span><br>
-                                            <span class="u-textDown__inner u-blocking">BAKE CHEESE TART</span>
+                                            <span class="u-textDown__inner u-blocking">SAVOIE CHEESE TART</span>
                                         </span>
                                     </p>
                                 </span>
@@ -312,7 +312,7 @@
                                     <div class="p-price__box3 _scrollBothSlideUp">
                                         <p>アレルギー品目：乳・小麦・卵<br>
                                             一部店舗では、ソフトクリームの販売も行っております。<br>
-                                            ※BAKE the SHOPでは６個￥1,380(税込)となります。</p>
+                                            ※SAVOIE the SHOPでは６個￥1,380(税込)となります。</p>
                                     </div>
                                 </div>
                             </div>
@@ -323,7 +323,7 @@
             <section class="p-eat">
                 <div class="p-eat__inner u-padding">
                     <header class="_scrollBothSlideUp">
-                        <p>BAKE CHEESE TARTのチーズタルトは、<br>
+                        <p>SAVOIE CHEESE TARTのチーズタルトは、<br>
                             食べ方によってさまざまな表情に変化します。<br>
                             4通りのおいしさを食べ比べてみてください。</p>
                     </header>
@@ -638,13 +638,13 @@
                     <div class="p-contact__tableBox">
                         <dl class="p-contact__table">
                             <dt>名称</dt>
-                            <dd>株式会社BAKE</dd>
+                            <dd>株式会社SAVOIE</dd>
                             <dt>サポートセンター(本社)</dt>
-                            <dd>〒108-0071 東京都港区白金台3-19-1 興和白金台ビル</dd>
+                            <dd>〒333-8888 東京都〇〇0-00-0 〇〇ビル</dd>
                             <dt>メールアドレス</dt>
-                            <dd>hello@bake.co.jp</dd>
+                            <dd>taart@savoie.co.jp</dd>
                             <dt>設立</dt>
-                            <dd>2018年1月1日 (創業 2013年4月16日)</dd>
+                            <dd>1999年1月1日 (創業 1998年1月1日)</dd>
                             <dt>事業内容</dt>
                             <dd>菓子の製造・販売、コマースサービスの運営管理、メディア運営</dd>
                             <dt>資本金</dt>
@@ -669,7 +669,7 @@
                             </div>
                             <div class="l-footer__linkBox">
                                 <div class="l-footer__link">
-                                    <a>BAKE CHEESE TART</a>
+                                    <a>SAVOIE CHEESE TART</a>
                                     <a>ESSENCE</a>
                                     <a>PRICE</a>
                                     <a>HOW TO EAT</a>
@@ -689,7 +689,7 @@
                                         <a><i class="fab fa-instagram"></i></a>
                                     </li>
                                 </ul>
-                                <p class="l-footer__text">Copyright © BAKE Inc. All rights reserved.</p>
+                                <p class="l-footer__text">Copyright © SAVOIE Inc. All rights reserved.</p>
                             </div>
                         </div>
                     </div>
