--- a/index.html
+++ b/index.html
@@ -751,18 +751,20 @@
           <div class="l-footer__main">
             <div class="l-footer__mainBox">
               <div class="l-footer__logoImg">
-                <img src="./images/logo/logo_white.jpg">
+                <a id="#top">
+                  <img src="./images/logo/logo_white.jpg">
+                </a>
               </div>
               <div class="l-footer__linkBox">
                 <div class="l-footer__link">
-                  <a>SAVOIE CHEESE TART</a>
-                  <a>ESSENCE</a>
-                  <a>PRICE</a>
-                  <a>HOW TO EAT</a>
-                  <a>PHILOSOPHY</a>
-                  <a>SHOPS</a>
-                  <a>NEWS</a>
-                  <a>CONTACT - FAQ</a>
+                  <a href="#savoie">SAVOIE CHEESE TART</a>
+                  <a href="#essence">ESSENCE</a>
+                  <a href="#price">PRICE</a>
+                  <a href="#eat">HOW TO EAT</a>
+                  <a href="#passion">PHILOSOPHY</a>
+                  <a href="#shop">SHOPS</a>
+                  <a href="#news">NEWS</a>
+                  <a href="#contact">CONTACT - FAQ</a>
                 </div>
                 <ul class="l-footer__list">
                   <li class="l-footer__item">
